[FIX] web: allow hidden column chooser overflow over chatter
The dropdown was overflowing below the chatter, making it unusable under some circumstances.

@moduon MT-4598 OPW-3684703

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -256,6 +256,7 @@
         .o_list_actions_header {
             width: 32px;
             background-color: var(--ListRenderer-thead-bg-color);
+            z-index: 100;
         }
 
         .o_data_row.o_list_no_open {
